# dynamic_themes

./: .gitignore  README.md  _switch_iterm.sh  daemon_handler.sh  dyth.sh  install.sh  on_iterm_opening.sh  pyproject.toml  requirements.txt  set_mac_wallpaper.scpt  set_themes.sh  setup_in_terminal.scpt  test.sh  uninstall.sh
PyScripts/: _dynamiser.py  _gen_daemon.py  _switch_wallpaper.py  dynamiser.py
theme_app/: _theme_UI.py  bash_test.sh  main_theme_UI.py  theme_UI.ui
