[tool.poetry]
name = "dynamic_themes"
version = "0.1.0"
description = ""
authors = ["Antoine de Lagrave <antoinedelagrave@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8p"
autopep8 = "1.6.0"
Jinja2 = "3.0.3"
MarkupSafe = "2.1.0"
pycodestyle = "2.8.0"
PyQt5 = "5.15.6"
PyQt5-Qt5 = "5.15.2"
PyQt5-sip = "12.9.1"
qt-material = "2.10"
toml = "0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
